--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,7 +1,10 @@
 body {
   background-color: lightblue;
 }
-
+/* Add some padding inside the card container */
+.container {
+  padding: 2px 16px;
+}
 #imageNav-area {
     width: 100%;
   
